[package]
name = "quote_tool_params"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn={version="2", default-features=false, features=["derive", "printing"]}
quote={version="1", default-features=false}
proc-macro2={version="1", default-features=false}
